# offline-hft

./: CMakeLists.txt  README.md  runBFC.sh
hft/: CMakeLists.txt  README.md  bfc_calib.C  runBFC.sh  runBFC_istCalib.sh  runBFC_istOfl.sh  runPxlSimWithPileup.csh
hft/StRoot/: StBFChain.patch  StEvent.patch  StEventUtilities.patch  StPxlSimMaker_pileupAdder.patch  StSsdDbMaker.patch  Sti.patch  StiMaker.patch  StiSsd.patch  Sti_StiMaker.patch
hft/StRoot/Hft/: StiPixelDetectorBuilder.cxx  StiPixelDetectorBuilder.h  StiPixelHitLoader.cxx
hft/StRoot/StBFChain/: BigFullChain.h  StBFChain.cxx
hft/StRoot/StEvent/: StContainers.cxx  StContainers.h  StEvent.cxx  StEvent.h  StEventClusteringHints.cxx  StEventTypes.h  StIstHit.cxx  StIstHit.h  StIstHitCollection.cxx  StIstHitCollection.h  StIstLadderHitCollection.cxx  StIstLadderHitCollection.h  StIstSensorHitCollection.cxx  StIstSensorHitCollection.h
hft/StRoot/StEventUtilities/: StEventHitIter.cxx  StuFixTopoMap.cxx
hft/StRoot/StHftPool/EventT/: EventT.cxx  EventT.h  EventTLinkDef.h  GuiEventHandler.h  HitMatchT.h  HitT.h  PrgOptionProcessor.cxx  PrgOptionProcessor.h  StiScanHistContainer.cxx  StiScanHistContainer.h  StiScanRootFile.cxx  StiScanRootFile.h  T.h  TStiKalmanTrack.cxx  TStiKalmanTrack.h  TStiKalmanTrackNode.cxx  TStiKalmanTrackNode.h  TrackT.h  VertexT.h  hft_display.cxx  hft_display.h
hft/StRoot/StHftPool/HftMatchedTree/: HftMatchedTree.cxx  HftMatchedTree.h  PrgOptionProcessor.cxx  PrgOptionProcessor.h
hft/StRoot/StHftPool/StiLajaTester/: .consign  StiLajaRootFile.cxx  StiLajaRootFile.h  StiLajaTester.cxx  StiLajaTester.h
hft/StRoot/StIstCalibrationMaker/: StIstCalibrationMaker.cxx  StIstCalibrationMaker.h
hft/StRoot/StIstClusterMaker/: StIstClusterMaker.cxx  StIstClusterMaker.h  StIstIClusterAlgo.h  StIstScanClusterAlgo.cxx  StIstScanClusterAlgo.h  StIstSimpleClusterAlgo.cxx  StIstSimpleClusterAlgo.h
hft/StRoot/StIstFastSimMaker/: StIstFastSimMaker.cxx  StIstFastSimMaker.h
hft/StRoot/StIstHitMaker/: StIstHitMaker.cxx  StIstHitMaker.h
hft/StRoot/StIstQAMaker/: StIstQAMaker.cxx  StIstQAMaker.h
hft/StRoot/StIstRawHitMaker/: StIstRawHitMaker.cxx  StIstRawHitMaker.h
hft/StRoot/StPxlClusterMaker/: StPxlCluster.cxx  StPxlCluster.h  StPxlClusterCollection.cxx  StPxlClusterCollection.h  StPxlClusterMaker.cxx  StPxlClusterMaker.h
hft/StRoot/StPxlHitMaker/: StPxlHitMaker.cxx  StPxlHitMaker.h
hft/StRoot/StPxlMonMaker/: StPxlMonMaker.cxx  StPxlMonMaker.h
hft/StRoot/StSsdDbMaker/: StSstDbMaker.h
hft/StRoot/StSstDaqMaker/: StSstConstant.h  StSstDaqMaker.cxx  StSstDaqMaker.h
hft/StRoot/StiSsd/: StiSsdDetectorBuilder.cxx  StiSsdDetectorBuilder.h  StiSsdDetectorGroup.cxx  StiSsdDetectorGroup.h  StiSsdHitLoader.cxx  StiSsdHitLoader.h  StiSsdIsActiveFunctor.h  StiSstDetectorBuilder.cxx
hft/StRoot/StiTest/: StiTestDetectorBuilder.cxx  StiTestDetectorBuilder.h  StiTestDetectorGroup.cxx  StiTestDetectorGroup.h
hft/StarDb/Calibrations/ist/: istControl.20130603.000001.C  istGain.20130603.000001.C  istMapping.dev14.C
hft/StarDb/Calibrations/pxl/: pxlSensorStatus.20130530.132801.C  (+3 more)
hft/ist/: write_idsOnTpc.C  write_istOnPst.C  write_ist_control.C  write_ist_gain.C  write_ist_mapping.C  write_ist_pednoise.C  write_ladderOnIst_ideal.C  write_pstOnIds.C  write_sensorOnLadder_ideal.C  write_sensorOnLadder_survey.C
hft/ist/calib/: channelMaskingList4Cosmic_ist_20140209.txt  ist_apv_dead.txt  write_ist_control.C  write_ist_gain.C  write_ist_pednoise.C
hft/ist/geom/: write_idsOnTpc_ideal.C  write_idsOnTpc_survey.C  write_istOnPst_ideal.C  write_ladderOnIst_ideal.C  write_pstOnIds_ideal.C  write_pstOnIds_survey.C  write_sensorOnLadder_survey.C
hft/pixel/geom/: README  Sector.C  assembly.C  run.C
hft/tests/: displayHft.C  display_hft.cc  generate_fz.py  hft_display.C  job_template_hftree.xml  job_template_stiscan_zslice.xml  loadLibs.C  singlepion.kumac  stiscan.cc  stiscan_zslice.kumac  style_hists.C  submit_jobs_hftree.sh  submit_jobs_stiscan_zslice.sh  tevedisp.cc  tevedisp.h  tgeo2stiTest.C
(+385 files in other folders)
